[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artsense-ml"
version = "0.1.0"
description = "Hybrid NLP and sentiment-based artwork classification engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]
